--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,18 @@
-#grid {
-  width: 80%;
-  border: 1px solid black;
+main {
+  height: 100vh;
+}
+
+.grid {
+  width: 650px;
+  height: 650px;
+  border: 4px solid black;
 }
 
 .squareCSS {
   width: calc(100% / 10);
   height: calc(100% / 10);
   border: 1px solid red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
