--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
+.logo {
+  font-size: 2rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 main {
-  height: 100vh;
+  background-color: #7fffd4;
 }
 
 .grid {
